--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-    "title":"Blog Title",
-    "subTitle":"Blog description",
-    "avatarUrl":"https://github.githubassets.com/favicons/favicon.svg",
+    "title":"jat002",
+    "subTitle":"Blog of tech and life",
+    "avatarUrl":"https://jat002.github.io/picx-images-hosting/WechatIMG1.86tevsnbo5.jpg",
     "GMEEK_VERSION":"last"
 }
